--- a/src/04-product/components/style/ProductComment.scss
+++ b/src/04-product/components/style/ProductComment.scss
@@ -30,13 +30,13 @@ $main-border-radius: 8px;
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
-    
 .a-commentInput {
     width: 420px;
     height: 80px;
     border-radius: $main-border-radius;
     appearance:none;
     -moz-appearance:none;
+    border: 2px solid $secondary-blue;
     background-color:$main-yellow;
     text-align: center;
     outline: none;
