--- a/src/04-product/components/style/ProductFilter.scss
+++ b/src/04-product/components/style/ProductFilter.scss
@@ -25,57 +25,73 @@ $main-border-radius: 8px;
 
 //CategoryFilter
 .a-productFilterWrapper {
-display: flex;
-justify-content: center;
-.a-category {
-  @extend %a-flex;
-  .a-categoryWrapper {
-    width: 800px;
+  display: flex;
+  justify-content: center;
+  .a-category {
     display: flex;
-    align-items: flex-end;
-    flex-wrap: wrap;
-    .a-categoryContentWapper {
-      @extend %a-flex;
-      flex-direction: column;
-      margin-top: 30px;
-      .a-iconSpan {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .a-categoryWrapper {
+      width: 840px;
+      display: flex;
+      align-items: flex-end;
+      flex-wrap: wrap;
+      .a-categoryContentWapper {
         @extend %a-flex;
         flex-direction: column;
-        .a-iconWrapper {
-          width: 120px;
-          height: 120px;
-          border-radius: 50%;
-          border: 8px solid #87efbd;
-          overflow: hidden;
-          background-color: $secondary-blue;
-          margin: 20px 10px 5px 10px;
+        margin-top: 30px;
+        .a-iconSpan {
           @extend %a-flex;
-          .a-icon {
-            width: 80px;
-            object-fit: cover;
+          flex-direction: column;
+          .a-iconWrapper {
+            width: 140px;
+            height: 140px;
+            border-radius: 50%;
+            border: 8px solid #87efbd;
+            overflow: hidden;
+            background-color: $secondary-blue;
+            margin: 20px 10px 5px 10px;
+            @extend %a-flex;
+            .a-icon {
+              width: 100px;
+              object-fit: cover;
+            }
           }
           .a-categoryIconWrapper {
             display: flex;
-            justify-content: c;
+            justify-content: center;
+            // .a-categoryInput {
+            //   display: none;
+            //   background-color: transparent;
+            // }
+            .a-categoryName {
+              text-align: center;
+              font-size: 20px;
+              color: $secondary-blue;
+              padding-left: 5px;
+            }
           }
-          .a-categoryInput {
-            display: none;
-            background-color: transparent;
-          }
-        }
-        .a-categoryName {
-          text-align: center;
-          font-size: 20px;
-          color: $secondary-blue;
         }
       }
     }
   }
 }
+.a-filterButton {
+  width: 200px;
+  text-align: center;
+  @extend %a-flex;
+  background-color: $main-yellow;
+  color: $main-blue;
+  border: $main-border;
+  border-radius: $main-border-radius;
+  padding: 5px 20px;
+  margin-top: 60px;
+  font-weight: 500;
 }
 
 // searchBar
-.a-sideBarWrapper{
+.a-sideBarWrapper {
   .a-searchBarWrapper {
     margin: 50px 50px 0 30px;
     width: 200px;
@@ -94,11 +110,10 @@ justify-content: center;
       width: 100%;
       object-fit: cover;
     }
-    
   }
-  }
-  // seachBar
-.a-sideBarWrapper{
+}
+// seachBar
+.a-sideBarWrapper {
   display: flex;
   .a-aladdinWrapper {
     width: 200px;
@@ -119,42 +134,41 @@ justify-content: center;
       // position: relative;
     }
   }
-  }
+}
 // ProductCard
 .a-filterProductCard {
-display: flex;
-flex-wrap: wrap;
-width: 800px;
-.a-filterProudctWrapper {
-  width: 150px;
   display: flex;
-  flex-direction: column;
-  .a-filterImgWrapper {
+  flex-wrap: wrap;
+  width: 800px;
+  .a-filterProudctWrapper {
     width: 150px;
-    height: 150px;
-    overflow: hidden;
-    border-radius: 8px;
-    border: 3px solid $secondary-blue;
-    img {
-      width: 100%;
-      object-fit: cover;
-      object-position: center center;
-    }
-  }
-  .a-filterProudctName {
-    color: $main-blue;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-  }
-  .a-filterTextWrapper {
     display: flex;
-    justify-content: center;
-    .a-filterText {
+    flex-direction: column;
+    .a-filterImgWrapper {
+      width: 150px;
+      height: 150px;
+      overflow: hidden;
+      border-radius: 8px;
+      border: 3px solid $secondary-blue;
+      img {
+        width: 100%;
+        object-fit: cover;
+        object-position: center center;
+      }
+    }
+    .a-filterProudctName {
       color: $main-blue;
-      font-size: 16px;
+      font-size: 18px;
+      font-weight: 500;
+      text-align: center;
+    }
+    .a-filterTextWrapper {
+      display: flex;
+      justify-content: center;
+      .a-filterText {
+        color: $main-blue;
+        font-size: 16px;
+      }
     }
   }
-  
-}
 }
