--- a/src/05-member/style/profile-pages/LikesProduct.scss
+++ b/src/05-member/style/profile-pages/LikesProduct.scss
@@ -32,10 +32,12 @@
 
     .s-l-p-card-inside {
       width: 100%;
-      // height: 100%;
+      max-height: 100%;
       display: flex;
       flex-wrap: wrap;
       overflow-y: scroll;
+
+      // border: 1px solid red;
 
       .s-l-p-data-error {
         font-size: 24px;
@@ -75,12 +77,7 @@
             color: #f00;
             text-align: center;
             font-size: 20px;
-          }
-
-          .s-l-p-heart.s-l-p-heart-active {
-            color: #fff;
-            text-align: center;
-            font-size: 20px;
+            cursor: pointer;
           }
         }
         .r-love-card-cover-middle {
