--- a/src/04-product/components/style/ProductDetail.scss
+++ b/src/04-product/components/style/ProductDetail.scss
@@ -48,13 +48,14 @@ input[type="number"] {
   background-color: $main-yellow;
 }
 .a-carouselBigWrapper {
-  margin: 50px 0 10px 0;
+  margin: 50px 0 0 0;
 }
 .a-productDetailWrapper {
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
   background-color: #fff;
+  margin: 0;
   .a-detailWrapper {
     display: flex;
     flex-direction: column;
