--- a/src/02-forum/styles/Card.scss
+++ b/src/02-forum/styles/Card.scss
@@ -19,6 +19,7 @@ $p:16px;
     flex-direction: column;
     align-items: center;
     margin-top: -0px;
+    font-weight: 800;
      .p-img-div{
     height: 320px;
     width: 100%;
@@ -91,6 +92,7 @@ $p:16px;
                 font-size: $h3;
                 color: $main-blue;
                 font-weight: 800;
+                line-height: 25px;
             }
            .p-contenter-p{
             font-size: $p;
