--- a/src/02-forum/styles/InnerOfficial.scss
+++ b/src/02-forum/styles/InnerOfficial.scss
@@ -21,7 +21,7 @@ $p:16px;
     .p-officialContainer{
     max-width: 1040px;
     position: relative;
-    left: 15%;
+    left: 18%;
     margin-top: 100px;
     .p-officialTitle{
     
@@ -94,6 +94,7 @@ $p:16px;
                 }
         }
         p{
+        font-size: $p;
         color: $main-text;
         margin-top: 10px;
         line-height: 150%;
