--- a/src/02-forum/styles/Recommendation.scss
+++ b/src/02-forum/styles/Recommendation.scss
@@ -11,6 +11,7 @@ $p-m:10px;
 .p-recomWrap{    
     .p-recomTitle{
         display: flex;
+        align-items: center;
         .p-likeWrap{
             margin-right:10px;
             width: 40px;
@@ -21,6 +22,7 @@ $p-m:10px;
         h5{
             color: $main-yellow;
             font-size: $h5;
+            font-weight: 800;
         }
     }
 .p-recomContent{
@@ -30,6 +32,7 @@ $p-m:10px;
         color:$main-yellow;
         font-size: $h5;
         margin-right: 20px;
+        font-weight: 800;
     }
     .p-recomText{  
              margin-top: 25px;
@@ -39,6 +42,8 @@ $p-m:10px;
             font-size: $h3;
             margin: 0;
             width: 80%;
+            font-weight: 500;
+            line-height: 25px;
         }
         .p-recomMember{
             color: $main-text;
