--- a/src/02-forum/styles/Side_bar.scss
+++ b/src/02-forum/styles/Side_bar.scss
@@ -1,6 +1,11 @@
 $main-yellow:#FAD249;
 $main-blue:#113F75;
 $main-text:#5C5C5C;
+$h1:48px;
+$h2:36px;
+$h3:20px;
+$h4:18px;
+$p:16px;
 *{
     box-sizing: border-box;
 }
@@ -46,6 +51,7 @@ $main-text:#5C5C5C;
     p{
         color: white;
         margin: 10px 0 0 0;
+        font-size: $p;
     }
     .p-activPage{
         width: 75px;
