re-organize other non-main pages

--- a/src/05-member/style/profile-pages/LikesProduct.scss
+++ b/src/05-member/style/profile-pages/LikesProduct.scss
@@ -140,6 +140,12 @@
   @media (max-width: 991px) {
     .s-l-p-card {
       height: 700px;
+
+      .s-l-p-card-inside {
+        .r-love-card-container {
+          width: 45%;
+        }
+      }
     }
   }
 }
