--- a/src/05-member/style/components/LikeLabels.scss
+++ b/src/05-member/style/components/LikeLabels.scss
@@ -14,4 +14,12 @@
 
     // border: 1px solid blue;
   }
+
+  @media (max-width: 991px) {
+    .s-l-label {
+      font-size: 14px;
+      padding: 7px 15px;
+      margin-left: 5px;
+    }
+  }
 }
