--- a/src/00-homepage/styles/TopCarousel.scss
+++ b/src/00-homepage/styles/TopCarousel.scss
@@ -58,6 +58,8 @@ $border-radius-button: 8px;
     }
 
     .y-top-carousel-banner {
+        overflow: hidden;
+        
         font-size: 0;
         img {
             width: 100%;
