--- a/src/03-shop/styles/03-shop-m-card.scss
+++ b/src/03-shop/styles/03-shop-m-card.scss
@@ -11,6 +11,7 @@ $card-btn: #80b938;
   display: flex;
   overflow-x: scroll;
   padding: 30px 0;
+  margin-bottom: 30px;
   .r-m-col {
     width: 33.333333%;
     padding-right: 5px;
