--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -59,21 +59,6 @@ $main-border-radius: 8px;
   background-color: #fff;
   position: relative;
 
-  .y-go-to-top {
-    display: none;
-    position: fixed;
-    z-index: 300;
-    right: 8%;
-    bottom: 15%;
-    width: 32px;
-    height: 32px;
-    background-image: url('./../../logo-and-fonts/pixel-topNormal.svg');
-    
-  }
-
-  .y-go-to-top:hover {
-    background-image: url('./../../logo-and-fonts/pixel-topClick.svg');
-  }
 
   .y-section {
     // border: 1px solid black;
@@ -431,6 +416,21 @@ $main-border-radius: 8px;
     padding-bottom: 20px;
     width: 100%;
 
+    .y-go-to-top {
+      // display: none;
+      position: absolute;
+      z-index: 300;
+      right: 8%;
+      bottom: 15%;
+      width: 24px;
+      height: 24px;
+      background-image: url('./../../logo-and-fonts/pixel-topNormal.svg');
+      
+    }
+  
+    .y-go-to-top:hover {
+      background-image: url('./../../logo-and-fonts/pixel-topClick.svg');
+    }
     .y-section-forum-title {
       margin-bottom: 0px;
 
@@ -529,15 +529,6 @@ $main-border-radius: 8px;
 
 @media (min-width: 391px) {
   .y-index-container {
-    .y-go-to-top {
-      right: 12%;
-      bottom: 20%;
-      width: 60px;
-      height: 60px;      
-    }
-  
-    .y-go-to-top:hover {
-    }
     
     .y-section {
       // border: 1px solid black;
@@ -1008,6 +999,17 @@ $main-border-radius: 8px;
 
     .y-section-forum {
       padding: 40px;
+      position: relative;
+
+      .y-go-to-top {
+        right: 20%;
+        bottom: 10%;
+        width: 36px;
+        height: 36px;      
+      }
+    
+      .y-go-to-top:hover {
+      }
       .y-section-forum-title {
         margin-bottom: 40px;
 
