--- a/src/00-homepage/styles/ShopHome.scss
+++ b/src/00-homepage/styles/ShopHome.scss
@@ -6,7 +6,7 @@ $main-text: #5e5e5e;
 $title-text: rgb(190, 174, 146);
 
 .r-shop-home-container {
-  background: url(./../../../public/03-shop-img/food_cola_s_01.png) 330px 50px/8%
+  background: url(./../../../public/03-shop-img/food_cola_s_01.png) 300px 50px/8%
       no-repeat,
     url(./../../../public/03-shop-img/food_ramen_01.png) 1550px 150px/8%
       no-repeat,
@@ -20,10 +20,11 @@ $title-text: rgb(190, 174, 146);
       display: flex;
       align-items: center;
       .r-shop-home-main-text {
-        width: 40%;
+        width: 45%;
         margin-left: auto;
         .r-shop-home-main-text-p {
           font-size: 48px;
+          line-height: 48px;
           font-weight: 700;
           letter-spacing: 0.2rem;
           line-height: 6rem;
@@ -46,7 +47,22 @@ $title-text: rgb(190, 174, 146);
           color: #fff;
           background-color: $main-orange;
           border-radius: 50%;
-          margin-left: 20px;
+          margin-left: 30px;
+          outline: 1px solid $main-orange;
+          outline-offset: 3px;
+          transition: .5s;
+          animation: 3s go-btn-shop infinite;
+        }
+        @keyframes go-btn-shop {
+          0%{
+            transform: scale(1);
+          }
+          50%{
+            transform: scale(1.5);
+          }
+          100%{
+            transform: scale(1);
+          }
         }
       }
     }
@@ -59,7 +75,6 @@ $title-text: rgb(190, 174, 146);
     }
   }
 }
-
 .r-shop-home-carousel {
   .r-wave-section {
     width: 100%;
@@ -96,6 +111,7 @@ $title-text: rgb(190, 174, 146);
     text-align: center;
     .r-shop-home-carousel-h2 {
       font-size: 60px;
+      line-height: 60px;
       font-weight: 700;
       letter-spacing: 0.2rem;
       color: #000;
@@ -120,8 +136,7 @@ $title-text: rgb(190, 174, 146);
     padding: 30px 0 60px 0;
     background-color: $main-yellow;
     .r-check-wrap {
-      cursor: pointer;
-
+      // cursor: pointer;
       .r-shop-home-input {
         display: none;
         background-color: transparent;
@@ -130,6 +145,7 @@ $title-text: rgb(190, 174, 146);
         background-color: $cate-btn;
       }
       .r-shop-home-carousel-check-span {
+        cursor: pointer;
         width: 150px;
         height: 50px;
         font-size: 18px;
@@ -233,14 +249,68 @@ $title-text: rgb(190, 174, 146);
 
     .r-shop-slider-traintop::-webkit-scrollbar {
       width: 12px;
-      height: 10px;
+      height: 20px;
+      
       // background-color: #f5f5f5;
     }
 
     .r-shop-slider-traintop::-webkit-scrollbar-thumb {
       border-radius: 10px;
+      // cursor: pointer;
       // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
       background-color: #fea920;
+    }
+  }
+}
+@media (max-width: 390px){
+  .r-shop-home-container{
+    background:none;
+    .r-shop-home-main{
+      flex-direction: column-reverse;
+      .r-shop-home-main-inner{
+        display: block;
+        .r-shop-home-main-text{
+          width: 100%;
+          margin-left: 0;
+          text-align: center;
+          .r-shop-home-main-text-p{
+            font-size: 24px;
+            line-height: 36px;
+            padding-top: 20px;
+          }
+          .r-shop-home-main-text-span{
+            font-size: 12px;
+          }
+          .r-shop-home-main-text-button{
+            font-size: 15px;
+            line-height: 30px;
+            width: 30px;
+          }
+        }
+      }
+      .r-shop-home-main-visual{
+        width: 100%;
+        background: url('./../../../public/03-shop-img/potato.png') 100% /cover
+        no-repeat;
+        margin-top: 0;
+      }
+    }
+  }
+  .r-shop-home-carousel{
+    .r-shop-home-carousel-title{
+      padding: 40px;
+      .r-shop-home-carousel-h2{
+        font-size: 25px;
+      line-height: 25px;
+      }
+    }
+    .r-shop-home-carousel-check{
+      display: block;
+      text-align: center;
+      .r-shop-home-carousel-check-span{
+        margin-right: 0;
+        margin-bottom: 10px;
+      }
     }
   }
 }
