--- a/src/03-shop/styles/03-shop-banner.scss
+++ b/src/03-shop/styles/03-shop-banner.scss
@@ -30,11 +30,13 @@ $card-btn: #80b938;
         .r-banner-inner-small {
           color: #fff;
           font-size: 24px;
+          line-height: 24px;
           font-weight: 700;
         }
         .r-banner-inner-p {
           color: #fff;
           font-size: 36px;
+          line-height: 36px;
           font-weight: 700;
           padding-top: 10px;
         }
