--- a/src/03-shop/styles/03-shop-side-bar.scss
+++ b/src/03-shop/styles/03-shop-side-bar.scss
@@ -38,12 +38,14 @@ $card-btn: #80b938;
         .r-shop-title-span {
           color: #fff;
           font-size: 24px;
+          line-height: 24px;
           font-weight: 700;
           padding-bottom: 10px;
         }
         .r-shop-title-p {
           color: #fff;
           font-size: 36px;
+          line-height: 36px;
           font-weight: 700;
         }
       }
@@ -73,12 +75,14 @@ $card-btn: #80b938;
           .r-place-title-span {
             color: $main-title;
             font-size: 18px;
+            line-height: 18px;
             font-weight: 700;
             padding-bottom: 10px;
           }
           .r-place-title-p {
             color: $main-title;
             font-size: 24px;
+            line-height: 24px;
             font-weight: 700;
           }
         }
@@ -126,12 +130,14 @@ $card-btn: #80b938;
           .r-cate-title-span {
             color: $main-title;
             font-size: 18px;
+            line-height: 18px;
             font-weight: 700;
             padding-bottom: 10px;
           }
           .r-cate-title-p {
             color: $main-title;
             font-size: 24px;
+            line-height: 24px;
             font-weight: 700;
           }
         }
@@ -161,13 +167,13 @@ $card-btn: #80b938;
         align-items: center;
         padding-bottom: 20px;
         .r-shop-icon-f {
-          width: 60px;
+          width: 55px;
           img {
             width: 100%;
           }
         }
         .r-filter-title {
-          padding-bottom: 10px;
+          
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -175,13 +181,16 @@ $card-btn: #80b938;
           .r-filter-title-span {
             color: $main-title;
             font-size: 18px;
+            line-height: 18px;
             font-weight: 700;
             padding-bottom: 10px;
           }
           .r-filter-title-p {
             color: $main-title;
             font-size: 24px;
+            line-height: 24px;
             font-weight: 700;
+            // padding-bottom: 10px;
           }
         }
       }
