--- a/src/06-event/styles/06-event-05-ticket.scss
+++ b/src/06-event/styles/06-event-05-ticket.scss
@@ -121,34 +121,57 @@ body {
     .j-box-top {
       z-index: 866;
       width: 2100px;
-      height: 500px;
+      height: 1050px;
       position: absolute;
       left: -500px;
-      top: -50px;
-      outline: 3px black solid;
-      background-color: teal;
-      animation-delay: 1s;
+      top: -500px;
+      background-color: $colorYellow;
+      // outline: 1px black solid;
       animation: boxtop 1.5s;
+      animation-delay: 1s;
+      animation-fill-mode: forwards;
       @keyframes boxtop {
         0% {
           left: -500px;
-          top: -50px;
+          top: -500px;
+          opacity: 1;
+        }
+        70% {
+          opacity: 1;
         }
         100% {
           left: -500px;
-          top: -900px;
+          top: -1000px;
+          opacity: 0;
         }
       }
     }
     .j-box-bottom {
       z-index: 866;
       width: 2100px;
-      height: 500px;
+      height: 800px;
       position: absolute;
       left: -500px;
       top: 550px;
-      background-color: teal;
-      outline: 3px teal solid;
+      background-color: $colorYellow;
+      animation: boxbottom 1.5s;
+      animation-delay: 1s;
+      animation-fill-mode: forwards;
+      @keyframes boxbottom {
+        0% {
+          left: -500px;
+          top: 550px;
+          opacity: 1;
+        }
+        70% {
+          opacity: 1;
+        }
+        100% {
+          left: -500px;
+          top: 950px;
+          opacity: 0;
+        }
+      }
     }
     .j-box-right {
       z-index: 867;
@@ -157,8 +180,25 @@ body {
       position: absolute;
       left: 700px;
       top: -150px;
-      background-color: orange;
-      outline: 3px teal solid;
+      background-color: $colorYellow;
+      animation: boxright 1.5s;
+      animation-delay: 1s;
+      animation-fill-mode: forwards;
+      @keyframes boxright {
+        0% {
+          left: 700px;
+          top: -150px;
+          opacity: 1;
+        }
+        70% {
+          opacity: 1;
+        }
+        100% {
+          left: 1300px;
+          top: -150px;
+          opacity: 0;
+        }
+      }
     }
     .j-box-left {
       z-index: 867;
@@ -167,35 +207,51 @@ body {
       position: absolute;
       left: -550px;
       top: -150px;
-      background-color: brown;
-      outline: 3px teal solid;
+      background-color: $colorYellow;
+      animation: boxleft 1.5s;
+      animation-delay: 1s;
+      animation-fill-mode: forwards;
+      @keyframes boxleft {
+        0% {
+          left: -550px;
+          top: -150px;
+          opacity: 1;
+        }
+        70% {
+          opacity: 1;
+        }
+        100% {
+          left: -1250px;
+          top: -150px;
+          opacity: 0;
+        }
+      }
     }
 
     .j-bang {
-      // margin-left: -5%;
-      // margin-top: -5%;
-      // animation: bang 5s;
       position: absolute;
-      top: -50px;
-      left: -450px;
-      outline: 2px solid red;
+      top: -480px;
+      left: -1550px;
+      // outline: 2px solid red;
       width: 1920px;
-      height: 1080px;
+      height: 2180px;
+      transform-origin: 2180px 1000px;
+      animation: bang 5s linear;
+      animation-delay: 2.5s;
       img {
         height: 100%;
       }
       @keyframes bang {
         0% {
-          top: -450px;
-          left: -850px;
+          transform: rotate(0deg);
+          opacity: 1;
         }
-        // 10% {
-        //   top: 100px;
-        //   left: 100px;
-        // }
+        80%{
+          opacity: 1;
+        }
         100% {
-          top: 100px;
-          left: 100px;
+          transform: rotate(100deg);
+          opacity: 0;
         }
       }
 
@@ -205,21 +261,21 @@ body {
       }
     }
 
-    .j-ticket {
-      position: absolute;
-      transform: scale(0.3) rotate(0);
-      transition: 0.8s;
-      animation: tickets 0.8s;
-      // @keyframes bang {
-      //   0% {
-      //     transform: scale(0.3) rotate(0);
-      //   }
-      //   100% {
-      //     transform: scale(0.3) rotate(720deg);
-      //   }
-      // }
-      transform-origin: center center;
-    }
+    // .j-ticket {
+    //   position: absolute;
+    //   transform: scale(0.3) rotate(0);
+    //   transition: 0.8s;
+    //   animation: tickets 0.8s;
+    // @keyframes bang {
+    //   0% {
+    //     transform: scale(0.3) rotate(0);
+    //   }
+    //   100% {
+    //     transform: scale(0.3) rotate(720deg);
+    //   }
+    // }
+    //   transform-origin: center center;
+    // }
 
     // &:hover {
     //   transform: scale(1);
@@ -232,5 +288,34 @@ body {
     //   transform: scale(0.3) rotate(720deg);
     // }
     // }
+  }
+  .j-tickets-wrap {
+    // outline: black solid 2px;
+    object-fit: cover;
+    width: 350px;
+    height: 200px;
+    position: absolute;
+    top: 430px;
+    left: 430px;
+    transform: rotateY(45deg);
+    animation: rotateAnimation 1s linear;
+    animation-delay: 1s;
+
+    animation-fill-mode: forwards;
+    @keyframes rotateAnimation {
+      0% {
+        transform: scale(1);
+        top: 430px;
+        left: 430px;
+      }
+      100% {
+        transform: scale(3);
+        top: 550px;
+        left: 370px;
+      }
+    }
+    .j-ticket {
+      width: 100%;
+    }
   }
 }
