--- a/src/06-event/styles/06-event-01-top.scss
+++ b/src/06-event/styles/06-event-01-top.scss
@@ -222,6 +222,21 @@ html {
   .j-star1 {
     @include position(63%, -10%);
     @include size(100px, 100px);
+    animation: pop 1s;
+    @keyframes pop {
+      0% {
+        transform: scale(1);
+        transform: rotate(0deg);
+      }
+      50% {
+        transform: scale(1.8);
+        transform: rotate(180deg);
+      }
+      100% {
+        transform: scale(1);
+        transform: rotate(360deg);
+      }
+    }
     @media (max-width: 390px) {
       @include position(59%, -8%);
     }
@@ -235,6 +250,21 @@ html {
   .j-star2 {
     @include position(63%, 3%);
     @include size(100px, 100px);
+    animation: pop 1s;
+    animation-delay: 0.2s;
+    @keyframes pop {
+      0% {
+        transform: scale(1);
+        transform: rotate(0deg);
+      }
+      50% {
+        transform: scale(1.8);
+      }
+      100% {
+        transform: scale(1);
+        transform: rotate(360deg);
+      }
+    }
     @media (max-width: 390px) {
       @include position(59%, 5%);
     }
@@ -248,6 +278,21 @@ html {
   .j-star3 {
     @include position(63%, 15%);
     @include size(100px, 100px);
+    animation: pop 1s;
+    animation-delay: 0.4s;
+    @keyframes pop {
+      0% {
+        transform: scale(1);
+        transform: rotate(0deg);
+      }
+      50% {
+        transform: scale(1.8);
+      }
+      100% {
+        transform: scale(1);
+        transform: rotate(360deg);
+      }
+    }
     @media (max-width: 390px) {
       @include position(59%, 17%);
     }
