--- a/src/04-product/components/style/ProductDetail.scss
+++ b/src/04-product/components/style/ProductDetail.scss
@@ -35,14 +35,7 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-.a-productCardList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  background: $main-yellow;
-  padding-top: line(3);
-}
+//navBar
 .a-navBarWrapper {
   height: 70px;
   background-color: $main-yellow;
@@ -50,6 +43,11 @@ input[type="number"] {
 .a-carouselBigWrapper {
   margin: 50px 0 0 0;
 }
+
+//productDatils
+.a-productDatilsBigWrapper {
+display: flex;
+flex-direction: column;
 .a-productDetailWrapper {
   display: flex;
   justify-content: space-evenly;
@@ -77,10 +75,6 @@ input[type="number"] {
     .a-productName {
       @extend %a-flex;
     }
-    // .a-productName h3 {
-    //   color: $main-blue;
-    //   font-size: 18px;
-    // }
     .a-productName img {
       width: 35px;
     }
@@ -130,9 +124,15 @@ input[type="number"] {
     }
     .a-productDescription {
       width: 600px;
+      .a-detailsText {
+        color: $main-text;
+        font-size: 20px;
+        font-weight: 400;
+      }
     }
-    .a-productDescription p {
-      color: $main-text;
+    .a-productRating {
+      font-size: 30px;
+      font-weight: 600;
     }
   }
   .a-priceContent {
@@ -246,4 +246,5 @@ input[type="number"] {
       width: 35px;
     }
   }
+}
 }
