--- a/src/04-product/components/style/RecommendCard.scss
+++ b/src/04-product/components/style/RecommendCard.scss
@@ -1,76 +1,138 @@
 main {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    letter-spacing: 2px
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  letter-spacing: 2px;
 }
 
-$main-blue: #2B325C;
-$main-yellow: #FAD249;
-$main-text: #5E5E5E;
-$secondary-blue: #113F75;
-$secondary-yellow: #FEF3DA;
-$green: #53B2A8;
-$red: #ED4743;
-$text-shadow: #E4E4E4;
+$main-blue: #2b325c;
+$main-yellow: #fad249;
+$main-text: #5e5e5e;
+$secondary-blue: #113f75;
+$secondary-yellow: #fef3da;
+$main-orange: #f57d00;
+$green: #53b2a8;
+$red: #ed4743;
+$text-shadow: #e4e4e4;
 $base-line-eight: 10px;
-$main-border: 3px solid #113F75;
+$main-border: 3px solid #113f75;
 $main-border-radius: 8px;
 %a-flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-@function line($count:1) {
-    @return $base-line-eight * $count;
+@function line($count: 1) {
+  @return $base-line-eight * $count;
 }
 
-.a-recommendText {
-    display: flex;
-    justify-content: center;
-    background-color: $main-yellow;
-    color: $secondary-blue;
-    @extend %a-flex;
-    height: 100px;
-    padding-bottom: 30px;
-}
-.a-recommendText img {
+.a-recommendTextWrapper {
+  @extend %a-flex;
+  background-color: $main-yellow;
+  height: 100px;
+  padding-bottom: 25px;
+  .a-iconWrapperNut {
     width: 35px;
-    animation: 1s swing infinite;
-    @keyframes swing {
-        0%{
-            transform: rotate(30deg)
+    img {
+      width: 100%;
+      animation: 1.5s swing infinite;
+      @keyframes swing {
+        0% {
+          transform: rotate(30deg);
         }
-        50%{
-            transform: rotate(-30deg)
+        50% {
+          transform: rotate(-30deg);
         }
-        100%{
-            transform: rotate(30deg)
+        100% {
+          transform: rotate(30deg);
         }
+      }
     }
+  }
+  .a-recommendText {
+    color: $secondary-blue;
+    font-size: 16px;
+    font-weight: 450;
+    padding-left: 5px;
+  }
 }
+
 .a-productRecommend {
-    @extend %a-flex;
-    background-color: $main-yellow;
-    height: 250px;
-    padding-bottom: 55px;
-}
-.a-productRecommend  img {
-    width: 30px;
-}
-.a-recommendImgWrapper{
-    @extend %a-flex;
-}
-.a-recommendWrapper {
-    display: flex;
-}
-.a-recommendWrapper img {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    border: 4px solid $secondary-blue;
-    border-radius: 8px;
-    margin: 20px 20px;
+  @extend %a-flex;
+  background-color: $main-yellow;
+  padding-bottom: 55px;
+  overflow-x: scroll;
+  .a-recommendContent {
+    position: relative;
+    width: 180px;
+    height: 180px;
+    overflow: hidden;
+    margin: 0 10px;
+   
+    .a-recommendImgWrapper {
+      border: 4px solid $secondary-blue;
+      border-radius: 8px;
+      width: 180px;
+      height: 180px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+      }
+    }
+        .a-shop-slider-content {
+          position: absolute;
+          text-align: center;
+          letter-spacing: 0.1rem;
+          width: 100%;
+          height: 180px;
+          // top: 0;
+          // left: 0;
+          bottom: -190px;
+          // display: flex;
+          // flex-direction: column;
+          // justify-content: flex-start;
+          align-items: center;
+          z-index: 100;
+          backdrop-filter: blur(15px);
+          box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
+          border: 1px solid rgba(255, 255, 255, 0.2);
+          transition: 0.5s;
+          .a-shop-slider-content-p {
+            font-size: 30px;
+            font-weight: 700;
+            color: #fff;
+            line-height: 4rem;
+          }
+   
+    }
+  
+  }
+  .a-recommendContent:hover {
+    .a-shop-slider-content {
+      bottom: -120px;
+    }
+    
+    .productRecommend::-webkit-scrollbar-track {
+      // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      // border-radius: 10px;
+      background-color: $main-orange;
+    }
+
+    .productRecommend::-webkit-scrollbar {
+      width: 15px;
+      height: 12px;
+      // background-color: #f5f5f5;
+    }
+
+    .productRecommend::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      background-color: #fff;
+    }
+  }
 }
