欻會員登入、留言、收藏

--- a/src/02-forum/styles/Message.scss
+++ b/src/02-forum/styles/Message.scss
@@ -46,6 +46,9 @@ $p-m:10px;
             outline:none;
             }
     }
+    .forumMember{
+        display: none;
+    }
 }
     button{
         background-color: $main-blue;
