--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(83, 83, 83, 75%);
+  background-color: rgba(40, 40, 40, 0.75);
   z-index: 9999;
 
   .s_modal_body {
