--- a/src/04-product/components/style/ProductList.scss
+++ b/src/04-product/components/style/ProductList.scss
@@ -19,7 +19,7 @@ main {
 //productList
 .a-productCardList {
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
     background: $main-yellow;
