--- a/src/04-product/components/style/ProductCard.scss
+++ b/src/04-product/components/style/ProductCard.scss
@@ -26,6 +26,25 @@ $main-border-radius: 8px;
     align-items: center;
 }
 
+//navBar
+  .a-navBarWrapper {
+    height: 70px;
+    background-color: $main-yellow;
+  }
+  .a-carouselBigWrapper {
+    margin: 50px 0 0 0;
+  }
+
+//productList
+.a-productCardList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    background: $main-yellow;
+    padding-top: 30px;
+    width: 1800px;
+
 .a-produtCardWrapper {
     width: 25%;
     display: flex;
@@ -57,8 +76,8 @@ $main-border-radius: 8px;
     }
     .a-discountIconWrapper {
         position: absolute;
-        top: 40%;
-        right: -15%;
+        top: 55%;
+        right: -10%;
     }
     .a-saleWrapper {
         width: 100px;
@@ -141,4 +160,5 @@ $main-border-radius: 8px;
     .a-addButton img {
         width: 35px;
     }
+}
 }
