--- a/src/06-event/styles/06-event-02-events.scss
+++ b/src/06-event/styles/06-event-02-events.scss
@@ -175,6 +175,19 @@ body {
       transition: 0.5s;
       transform: scale(0.8);
       @include position(16%, -6%);
+      &:hover {
+        transform: translateY(-16%);
+      }
+      .j-mWord1 {
+        position: absolute;
+        top: 30px;
+        right: 181px;
+        width: 50px;
+        height: 50px;
+        // outline: 1px solid black;
+        color: $colorWhite;
+        font-size: 5rem;
+      }
       @media (max-width: 390px) {
         transform: scale(0.3);
         position: absolute;
@@ -187,6 +200,19 @@ body {
       transition: 0.5s;
       transform: scale(0.8);
       @include position(16%, 18%);
+      &:hover {
+        transform: translateY(-16%);
+      }
+      .j-mWord2 {
+        position: absolute;
+        top: 30px;
+        right: 181px;
+        width: 50px;
+        height: 50px;
+        // outline: 1px solid black;
+        color: $colorWhite;
+        font-size: 5rem;
+      }
       @media (max-width: 390px) {
         transform: scale(0.3);
         position: absolute;
@@ -199,6 +225,19 @@ body {
       transition: 0.5s;
       transform: scale(0.8);
       @include position(16%, 41%);
+      &:hover {
+        transform: translateY(-16%);
+      }
+      .j-mWord3 {
+        position: absolute;
+        top: 30px;
+        right: 181px;
+        width: 50px;
+        height: 50px;
+        // outline: 1px solid black;
+        color: $colorWhite;
+        font-size: 5rem;
+      }
       @media (max-width: 390px) {
         transform: scale(0.3);
         position: absolute;
@@ -211,6 +250,19 @@ body {
       transition: 0.5s;
       transform: scale(0.8);
       @include position(16%, 65%);
+      &:hover {
+        transform: translateY(-16%);
+      }
+      .j-mWord4 {
+        position: absolute;
+        top: 30px;
+        right: 181px;
+        width: 50px;
+        height: 50px;
+        // outline: 1px solid black;
+        color: $colorWhite;
+        font-size: 5rem;
+      }
       @media (max-width: 390px) {
         transform: scale(0.3);
         position: absolute;
