--- a/src/01-cart/styles/CartInfo.scss
+++ b/src/01-cart/styles/CartInfo.scss
@@ -2,6 +2,10 @@ $main-yellow: #FAD249;
 $main-blue: #113F75;
 $main-text: #5E5E5E;
 
+$btn-red: #ED4743;
+$btn-green: #CCDE73;
+$btn-pink: #FF9696;
+
 $border-lg: $main-blue 3px solid;
 $border-sm: $main-blue 2px solid;
 
@@ -182,7 +186,8 @@ $border-radius-button: 8px;
     
             .y-Cart-main {
                 border: $border-sm;
-
+                // background-color: $main-yellow;
+                background-color: #fff;
                 .y-Cart-member-info {
                     display: flex;
                     .y-Cart-member-details {
@@ -196,21 +201,50 @@ $border-radius-button: 8px;
                     }
                 }
                 .y-Cart-pickup-radio {
-
+                    padding: 20px;
                     li {
-                        .fa-triangle {
-                            font-size: 24px;
-                            color: $main-text;
-                        }
-                        .y-pickup-way-options {
-                        
-
-                            input {
-                                display: none;
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 10px;
+                        height: 60px;
+                        padding: 10px 20px;
+                        .y-pickup-radio-icons {
+                            width: 20px;
+                            height: 20px;
+                            margin-right: 20px;
+                            .fa-triangle {
+                                // font-size: 24px;
+                                // color: $main-text;
                             }
+                            img {
+                                width: 100%;
+                                object-fit: cover;
+                            }
+                        }
                         
+                        .y-pickup-way-options {
+                            margin-right: 20px;
+                            font-size: 20px;
+                            line-height: 100%;
+                        
+                        }
+                        input {
+                            display: none;
+                        }
+                    
+                        .y-pickup-notice {
+                            background-color: $btn-pink;
+                            color: #fff;
+                            font-weight: bold;
+                            letter-spacing: 2px;
+                            // line-height: 30px;
+                            padding: 3px 10px;
+                        }
                         
                     }
+                    .y-Cart-Pick-selected {
+                        border: 2px solid rgba(114, 114, 114, 0.75);
+                        box-shadow: 3px 3px 3px rgba(114, 114, 114, 0.75);
                     }
                     
                 }
@@ -497,6 +531,9 @@ $border-radius-button: 8px;
                             input {
                                 display: none;
                             }
+                        }
+                        .y-Cart-Pick-selected {
+
                         }
                     }
                 }
