--- a/src/05-member/style/UserSign.scss
+++ b/src/05-member/style/UserSign.scss
@@ -223,44 +223,89 @@ $s-main-b: #113f75;
             font-weight: 600;
           }
 
-          .s-login-gmailBtn {
-            font-weight: 600;
-            width: 100%;
-            height: 46px;
-            cursor: pointer;
-            /* border: 1px solid #333; */
-            box-shadow: 0px 5px 5px rgba(206, 71, 67, 0.25);
-            border-radius: 8px;
-            display: flex;
-            justify-content: space-between;
-            align-items: baseline;
+          // .s-login-gmailBtn {
+          //   font-weight: 600;
+          //   width: 100%;
+          //   height: 46px;
+          //   cursor: pointer;
+          //   /* border: 1px solid #333; */
+          //   box-shadow: 0px 5px 5px rgba(206, 71, 67, 0.25);
+          //   border-radius: 8px;
+          //   display: flex;
+          //   justify-content: space-between;
+          //   align-items: baseline;
 
-            position: relative;
+          //   position: relative;
 
-            .s-login-gmail {
-              background: $s-bgc;
-              color: #333;
-              width: 42px;
-              height: 38px;
-              position: absolute;
-              left: 10px;
-              top: 2px;
-              z-index: 20;
+          //   .s-login-gmail {
+          //     background: $s-bgc;
+          //     color: #333;
+          //     width: 42px;
+          //     height: 38px;
+          //     position: absolute;
+          //     left: 10px;
+          //     top: 2px;
+          //     z-index: 20;
 
-              // border: 1px solid blue;
-            }
+          //     // border: 1px solid blue;
+          //   }
 
-            .s-login-googleSubmit {
-              border: none;
-              width: calc(100% - 42px);
-              background: $s-bgc;
-              color: #333;
-              position: absolute;
-              top: 0;
-              right: 0;
-              /* border: 1px solid green; */
-            }
-          }
+          //   .s-login-googleSubmit {
+          //     border: none;
+          //     width: calc(100% - 42px);
+          //     background: $s-bgc;
+          //     color: #333;
+          //     position: absolute;
+          //     top: 0;
+          //     right: 0;
+          //     /* border: 1px solid green; */
+          //   }
+          // }
+        }
+      }
+
+      .s-login-gmailBtn {
+        font-weight: 600;
+        width: 100%;
+        height: 46px;
+        box-shadow: 0px 5px 5px rgba(206, 71, 67, 0.25);
+        border-radius: 8px;
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+
+        position: relative;
+
+        /* border: 1px solid #333; */
+
+        .s-login-gmail {
+          background: $s-bgc;
+          color: #333;
+          width: 42px;
+          height: 38px;
+          position: absolute;
+          left: 10px;
+          top: 2px;
+          z-index: 20;
+          cursor: pointer;
+
+          // border: 1px solid blue;
+        }
+
+        .s-login-googleSubmit {
+          border: none;
+          width: calc(100% - 42px);
+          background: $s-bgc;
+          color: #333;
+          position: absolute;
+          top: 0;
+          right: 0;
+          font-size: 16px;
+          height: 100%;
+          font-weight: 700;
+          cursor: pointer;
+
+          // border: 1px solid green;
         }
       }
 
