--- a/src/04-product/components/style/ProductFilter.scss
+++ b/src/04-product/components/style/ProductFilter.scss
@@ -93,6 +93,7 @@ $main-border-radius: 8px;
 .a-productCardsWrapper {
   display: flex;
   justify-content: center;
+
 // searchBar
 .a-sideBarWrapper {
   .a-searchBarWrapper {
@@ -140,10 +141,16 @@ $main-border-radius: 8px;
 // }
 
 // ProductCard
+.a-porductCards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 800px;
+  margin-top: 30px;
 .a-filterProductCard {
   display: flex;
   flex-wrap: wrap;
-  width: 800px;
   .a-filterProudctWrapper {
     width: 150px;
     display: flex;
@@ -157,6 +164,7 @@ $main-border-radius: 8px;
       border: 3px solid $secondary-blue;
       img {
         width: 100%;
+        height: 100%;
         object-fit: cover;
         object-position: center center;
       }
@@ -175,7 +183,17 @@ $main-border-radius: 8px;
         color: $main-blue;
         font-size: 16px;
       }
-    
   }
+}
+.a-filterCardButton {
+  width: 200px;
+  text-align: center;
+  background-color: $main-yellow;
+  color: $main-blue;
+  border: $main-border;
+  border-radius: $main-border-radius;
+  padding: 5px 20px;
+  font-weight: 500;
+}
 }
 }
